--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -1,15 +1,13 @@
 .container {
+  position: relative;
   width: 100vw;
   height: 100vh;
-
-  > div {
-    padding: 16px;
-  }
 }
 
 .container-main {
   border-left: 1px solid #fff;
   border-right: 1px solid #fff;
+  background-color: #f9f9f9;
 
   display: flex;
   justify-content: center;
@@ -19,11 +17,14 @@
 .container-app {
   width: 375px;
   height: 667px;
-  background-color: #f9f9f9;
+  overflow-y: auto;
+  background-color: #fff;
 }
 
 .container-left {
+  padding: 16px;
 }
 
 .container-right {
+  padding: 16px;
 }
